adding cards-wrapper, card, price, h3, card-list and button styles

--- a/pricing-cards.html
+++ b/pricing-cards.html
@@ -5,16 +5,17 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>CSS Pricing Cards</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
     <section class="cards-wrapper">
         <div class="card">
-            <h1>Basic Plan</h1>
             <div class="price">
                 <h2>$4.99</h2>
                 <h5>/mo</h5>
             </div>
+            <h3>Basic Plan</h3>
             <ul class="card-list">
                 <li>Community Access</li>
                 <li>24/7 Customer Support</li>
@@ -23,11 +24,11 @@
         </div>
 
         <div class="card">
-            <h1>Standard Plan</h1>
             <div class="price">
                 <h2>$9.99</h2>
                 <h5>/mo</h5>
             </div>
+            <h3>Standard Plan</h3>
             <ul class="card-list">
                 <li>Everything in Basic Plan</li>
                 <li>Professional Email</li>
@@ -38,11 +39,11 @@
         </div>
 
         <div class="card">
-            <h1>Premium Plan</h1>
             <div class="price">
                 <h2>$19.99</h2>
                 <h5>/mo</h5>
             </div>
+            <h3>Premium Plan</h3>
             <ul class="card-list">
                 <li>Everything in Standard Plan</li>
                 <li>Unlimited Users Account</li>
