card and card-list changes, adding button css and mediaqueries

--- a/pricing-cards.html
+++ b/pricing-cards.html
@@ -12,10 +12,10 @@
     <section class="cards-wrapper">
         <div class="card">
             <div class="price">
-                <h2>$4.99</h2>
+                <h4>$4.99</h4>
                 <h5>/mo</h5>
             </div>
-            <h3>Basic Plan</h3>
+            <h3>Basic</h3>
             <ul class="card-list">
                 <li>Community Access</li>
                 <li>24/7 Customer Support</li>
@@ -25,10 +25,10 @@
 
         <div class="card">
             <div class="price">
-                <h2>$9.99</h2>
+                <h4>$9.99</h4>
                 <h5>/mo</h5>
             </div>
-            <h3>Standard Plan</h3>
+            <h3>Standard</h3>
             <ul class="card-list">
                 <li>Everything in Basic Plan</li>
                 <li>Professional Email</li>
@@ -40,10 +40,10 @@
 
         <div class="card">
             <div class="price">
-                <h2>$19.99</h2>
+                <h4>$19.99</h4>
                 <h5>/mo</h5>
             </div>
-            <h3>Premium Plan</h3>
+            <h3>Premium</h3>
             <ul class="card-list">
                 <li>Everything in Standard Plan</li>
                 <li>Unlimited Users Account</li>
@@ -55,7 +55,6 @@
         </div>
 
     </section>
-
 </body>
 
 </html>
